--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+@plugin "daisyui";
+
+
+@theme {
+  --color-mz-primary: #4C6793;
+  --color-mz-secound: #434F62;
+  --breakpoint-xs: 23rem;
+}
+
+@layer components {
+  .icons {
+  @apply sm:text-xl   cursor-pointer ;
+  }
+  .hov-text {
+  @apply hover:text-zinc-500 duration-200
+  }
+  .links {
+  @apply  text-xs sm:text-sm font-semibold capitalize;
+  }
+  .bg-space {
+  @apply bg-[url('https://res.cloudinary.com/mohamedenara/image/upload/v1741027606/bg-space_px2q4e.jpg')]
+  bg-cover bg-no-repeat
+  }
+}
