--- a/src/app/categories/components/category-details/components/comments/comments.component.html
+++ b/src/app/categories/components/category-details/components/comments/comments.component.html
@@ -1,10 +1,10 @@
-<section class="w-full flex flex-col justify-center items-start gap-5 text-gray-50  my-5  ">
+<section class="w-full flex flex-col justify-center items-start gap-5 text-gray-50  my-5 ">
     <div class="flex justify-center items-center capitalize gap-7">
-    <h1 class="text-xl font-bold">0 comments</h1>
-    <h2 class="text-sm">
+    <h1 class="text-xl font-bold">{{countComments()}} comments</h1>
+    <button type="button" class="cursor-pointer capitalize text-sm hover:opacity-50 duration-200"> 
     <i class="fa-solid fa-bars-staggered"></i>
     sort by
-    </h2>
+    </button>
     </div>
     
     <div class="w-full flex flex-col justify-center items-start gap-5">
