--- a/src/app/categories/components/category-details/components/video-interaction/video-interaction.component.html
+++ b/src/app/categories/components/category-details/components/video-interaction/video-interaction.component.html
@@ -9,13 +9,13 @@
 
     <li title="dislike" class="hover:bg-zinc-300 hover:text-black rounded duration-200 p-1">
     <button type="button" class="cursor-pointer text-xs">
-    <i class="fa-regular fa-thumbs-down text-xl"></i>  {{dislikes()}}
+    <i class="fa-regular fa-thumbs-down text-xl"></i>  {{0}}
     </button>
     </li>
 
     <li title="like" class="hover:bg-zinc-300 hover:text-black rounded duration-200 p-1">
     <button type="button" class="cursor-pointer text-xs">
-    <i class="fa-regular fa-thumbs-up text-xl"></i> {{likes()}}
+    <i class="fa-regular fa-thumbs-up text-xl"></i> {{0}}
     </button>
     </li>
 
