--- a/src/app/categories/components/category-details/components/details-aside/details-aside.component.html
+++ b/src/app/categories/components/category-details/components/details-aside/details-aside.component.html
@@ -1,8 +1,7 @@
-<aside class="w-full  h-[70vh] flex-col justify-start items-center hidden md:inline-flex gap-10">
+<aside class="w-full  h-[70vh] flex-col justify-start items-center  gap-10">
     <app-header-details-side class="w-full"/>
     <app-related class="w-full"
     [categoryRelated]="categoryData()"
     [categoryRelatedData]="category()"
-    [isPlaying]="isPlaying()"
     />
 </aside>
