--- a/src/app/features/auth/components/auth-model/auth-model.component.html
+++ b/src/app/features/auth/components/auth-model/auth-model.component.html
@@ -1,4 +1,4 @@
-<section class="w-[90%] sm:w-[30rem] mx-auto fixed bg-white rounded z-50  left-[50%] translate-x-[-50%] 
+<section class="w-[90%] sm:w-[30rem] mx-auto fixed bg-white rounded z-[100]  left-[50%] translate-x-[-50%] 
 top-[50%] translate-y-[-50%] shadow-sm shadow-black">
 
 <div class="flex flex-col items-center mt-[10vh] m-5">
@@ -14,5 +14,5 @@ top-[50%] translate-y-[-50%] shadow-sm shadow-black">
 
 </section>
 <section (click)="closeAuth()"
-class="w-full h-screen fixed bg-black left-0 top-0 z-20 opacity-50">
+class="w-full h-screen fixed bg-black left-0 top-0 z-50 opacity-50">
 </section>
