--- a/src/app/features/packages/page/packages/packages.component.html
+++ b/src/app/features/packages/page/packages/packages.component.html
@@ -1,10 +1,10 @@
-<section class="w-full  bg-space">
+<section class="w-full bg-space">
     <div class="w-full h-35"></div>
     <ul class="w-full h-full flex flex-wrap justify-evenly items-center bg-transparent  ">
     @for (package of packages(); track package.id) {
     @defer (on viewport) {
 
-    <li class="w-80 min-h-[70vh] bg-base-200 mb-12 mt-2 rounded-2xl shadow-xl shadow-mz-secound
+    <li class="w-80 min-h-[70vh] bg-white mb-12 mt-2 rounded-2xl shadow-xl shadow-mz-secound
     hover:shadow-sm duration-200 flex flex-col justify-start items-center ">
 
     <div class="m-2 flex flex-col justify-center items-start w-[90%] gap-4">
