--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,10 +1,10 @@
-<nav *ngIf="isScroll()" class="w-full h-12 fixed bottom-0  z-10  bg-gray-100  
-md:hidden shadow-md shadow-black">
+<nav *ngIf="isScroll()" class="w-full  fixed bottom-0  z-10  bg-gray-100  
+md:hidden shadow-md shadow-black ">
     <app-links
     [showIcon]="true"
     linksClass="flex flex-col justify-center items-center z-12 text-gray-900 
-    xs:w-15 sm:w-22 hover:bg-mz-primary hover:rounded-t-md  md:hover:rounded-3xl py-2 
-    cursor-pointer hover:text-gray-50"
+    xs:w-15 sm:w-22 hover:bg-mz-primary hover:rounded-t-md  md:hover:rounded-3xl py-1
+    cursor-pointer hover:text-gray-50 text-lg"
     styleActiveClass="bg-mz-primary text-white rounded-t-md "
     />
 
