--- a/src/app/shared/components/links/links.component.html
+++ b/src/app/shared/components/links/links.component.html
@@ -1,4 +1,4 @@
-<ul  [ngClass]="ulClass() ? ulClass() : 'w-full h-full flex justify-evenly items-center gap-2 m-1'">
+<ul  [ngClass]="ulClass() ? ulClass() : 'w-full h-full flex justify-evenly items-center  m-1'">
     @for (link of links(); track $index) {
 
     <li [routerLink]="link.path"  [ngClass]="linksClass()"
@@ -8,7 +8,7 @@
     <i *ngIf="showIcon()" [class]="link.iconName" class="icons" [ngClass]="iconClass()">
     </i>
 
-    <a class="text-xs md:text-sm font-semibold capitalize " >
+    <a class="text-[10px] md:text-sm font-medium capitalize " >
     {{link.linkName | translate}} 
     </a>
 
