--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <section >
-  <app-header />
-  <router-outlet name="register"/>
-  <router-outlet name="loginIn"/>
-  <router-outlet name="profile"/>
-  <router-outlet />
-  <app-footer />
-</section>
 
- 
+    <app-header />
+    <router-outlet name="register"/>
+    <router-outlet name="loginIn"/>
+    <router-outlet name="profile"/>
+    <router-outlet name="booking-outlet"/>
+    <router-outlet />
+    <app-footer />
+
+
+</section>
