--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,11 +1,3 @@
-<section class="w-full  flex flex-col gap-16 justify-between items-center bg-space">
-
-
-    <header class="relative w-full ">
-    <app-header />
-    </header>
-
-    <router-outlet  class="w-full"/>
-   
-
+<section class="w-full ">
+    <router-outlet />
 </section>
