--- a/src/app/features/home/page/home.component.html
+++ b/src/app/features/home/page/home.component.html
@@ -1,14 +1,16 @@
-<section >
+<section class="w-full">
 
-<section class="w-full h-screen ">
+<section class="w-full bg-black h-screen ">
     <app-video-background 
     [videoSrc]="videoBgFullScreen()"
     videoClass="hidden sm:inline-block"
+    videoPoster="https://res.cloudinary.com/mohamedenara/image/upload/v1742249825/bg-mz_zz547u.png"
     />
 
     <app-video-background 
     [videoSrc]="videoBgSmallScreen()"
     videoClass="sm:hidden"
+    videoPoster="https://res.cloudinary.com/mohamedenara/image/upload/v1742250005/bg-mz-2_synjth.png"
     />
 </section>
 
