--- a/src/app/categories/components/category-details/components/comments/components/sent-comments/sent-comments.component.html
+++ b/src/app/categories/components/category-details/components/comments/components/sent-comments/sent-comments.component.html
@@ -1,15 +1,19 @@
 <section class="w-full flex flex-col justify-center items-start gap-5">
-    @for (data of comments(); track data.id) {
+    @for (data of comments(); track data.id ; let index = $index) {
     @defer (on viewport) {
-    <div class="w-full flex-col justify-between items-center bg-zinc-600 p-2 rounded shadow-md shadow-black"
+    <div class="w-full flex-col justify-between items-center bg-mz-secound p-2 rounded
+    shadow-md shadow-black"
     [ngClass]="isEdit_id() !== data.id && isEdit_id() !== null ? 'opacity-25' : ''">
     <div class="w-full flex justify-between items-start gap-2 ">
     <div class="w-full flex justify-start items-start gap-2">
         
+
     <app-user-image 
-    [userImage]="data.picture"
-    [userName]="data.userName"
-    imageClass="size-10" />
+        [userData]="{image : data.picture , userName : data.userName}"
+        imageClass="size-10" >
+        <span *ngIf="isUser()?.user_id === data.user_id" 
+        class="size-2 rounded-full absolute bg-green-500 right-1 bottom-0"></span>
+    </app-user-image>
 
     <div class="w-full flex flex-col justify-center items-start ">
     <ul class="flex justify-center items-center gap-2 font-semibold text-gray-50 text-sm">
@@ -17,18 +21,17 @@
     <li class="font-[400] text-blue-400 text-xs">{{formatTime(data.created_at!)}}</li>
     </ul>
 
-        <textarea [ngModel]="isEdit_id() === data.id ? editCommentValue() : null"
+        <input #inputRef type="text" [ngModel]="isEdit_id() === data.id ? editCommentValue() : null"
         (ngModelChange)="changeCommentValue($event)"
         [placeholder]="data.comment" [disabled]="isEdit_id() === data.id ? false : true"
-        class="w-full outline-none  placeholder:text-gray-50 text-sm"
+        class="w-full outline-none  placeholder:text-gray-50 text-sm py-2"
         
-        ></textarea>
-
+        />
+    
     </div>
     </div>
 
-    <div *ngIf="isUser().user_id === data.user_id" class="relative">
-
+    <div *ngIf="isUser()?.user_id === data.user_id" class="relative">
     <button (click)="initCommentEditActive(data.id!)" type="button" 
     class="cursor-pointer text-lg  text-gray-50 mx-1">
     <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -61,9 +64,27 @@
 
     <ul *ngIf="isEdit_id() === data.id"
     class="w-full flex justify-end items-center gap-5 capitalize">
-        <li (click)="cancelComment()"   class="cursor-pointer"><a>cancel</a></li>
-        <li (click)="editComment(data)" class="cursor-pointer"><a>edit comment</a></li>
-        </ul>
+        <li (click)="cancelComment()"   ><a>cancel</a></li>
+        <li (click)="editComment(data)" ><a>edit comment</a></li>
+    </ul>
+
+    <ul *ngIf="!isEdit_id()"
+    class="w-[95%] flex justify-start items-center gap-5 capitalize mx-[5%] m-1">
+    <li title="dislike" class=" flex justify-center items-center gap-4">
+        <button type="button" class=" text-xs">
+        <i class="fa-regular fa-thumbs-down text-xl"></i>  {{0}}
+        </button>
+        <button type="button" class=" text-xs">
+            <i class="fa-regular fa-thumbs-up text-xl"></i> {{0}}
+        </button>
+    </li>
+    <li title="like" class="">
+    <a >
+    replay <i class="fa-solid fa-angle-up text-xs"></i>
+    </a>
+    </li>
+    </ul>
+
     </div>
 
     }@placeholder {
