--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <nav *ngIf="isScroll()" class="w-full  fixed bottom-0  z-10  bg-gray-100  
-md:hidden shadow-md shadow-black ">
+lg:hidden shadow-md shadow-black ">
     <app-links
     [showIcon]="true"
     linksClass="flex flex-col justify-center items-center z-12 text-gray-900 
-    xs:w-15 sm:w-22 hover:bg-mz-primary hover:rounded-t-md  md:hover:rounded-3xl py-1
+    xs:w-15 sm:w-22 hover:bg-mz-primary hover:rounded-t-md  py-1 duration-200
     cursor-pointer hover:text-gray-50 text-lg"
     styleActiveClass="bg-mz-primary text-white rounded-t-md "
     />
