--- a/src/app/features/auth/components/auth-model/auth-model.component.html
+++ b/src/app/features/auth/components/auth-model/auth-model.component.html
@@ -1,18 +1,21 @@
-<section class="w-[90%] sm:w-[30rem] mx-auto fixed bg-white rounded z-[100]  left-[50%] translate-x-[-50%] 
-top-[50%] translate-y-[-50%] shadow-sm shadow-black">
+<section class="w-[95%] sm:w-160 h-[90%] mx-auto fixed bg-gray-50 rounded z-[100]  
+left-[50%] translate-x-[-50%]  top-[50%] translate-y-[-50%] shadow-sm shadow-black
+flex justify-center items-center flex-col 
+">
 
-<div class="flex flex-col items-center mt-[10vh] m-5">
+<div class="w-full flex flex-col items-center my-2">
     
 <a (click)="closeAuth()">
     <i class="fa-solid fa-close hover:text-error duration-200 absolute right-5 top-5 icons"></i>
 </a>
-<h2 class="mb-5 text-gray-900 font-bold text-xl">{{authTilte() | translate}}</h2>
+
+<h2 class="mb-5 text-gray-900 font-bold text-xl capitalize">{{authTilte() | translate}}</h2>
     <app-sign-with-google (click)="signInWithGoogle()" />
     <span class=" text-black font-bold my-2">Or</span>
     <ng-content />
 </div>
-
 </section>
+
 <section (click)="closeAuth()"
 class="w-full h-screen fixed bg-black left-0 top-0 z-50 opacity-50">
 </section>
