--- a/src/app/features/booking/components/form-booking-feild/form-booking-feild.component.html
+++ b/src/app/features/booking/components/form-booking-feild/form-booking-feild.component.html
@@ -4,7 +4,7 @@
         <input type="text" name="Full Name" id="Full Name" placeholder="Full Name"
         formControlName="fullName"
         class="w-full input input-neutral focus:outline-mz-primary border-gray-300 focus:border-transparent
-        border-2 placeholder:font-bold placeholder:text-gray-400">
+        border-2 placeholder:font-bold placeholder:text-gray-400 bg-gray-50 text-gray-900">
 
         @if (formGroup().get('fullName')?.invalid && formGroup().get('fullName')?.touched) {
         <div class="w-full flex flex-col gap-1 capitalize  text-sm text-error">
@@ -20,7 +20,7 @@
         <input type="text" name="Phone Number" id="Phone Number" placeholder="Enter Your Phone Number"
         formControlName="phone"
         class="w-full input input-neutral focus:outline-mz-primary border-gray-300 focus:border-transparent
-        border-2 placeholder:font-bold placeholder:text-gray-400" >
+        border-2 placeholder:font-bold placeholder:text-gray-400 bg-gray-50  text-gray-900" >
 
         @if (formGroup().get('phone')?.invalid && formGroup().get('phone')?.touched) {
             <div class="w-full flex flex-col gap-1 capitalize  text-sm text-error">
@@ -40,7 +40,7 @@
         <input type="email" name="email address" id="email address" placeholder="Enter Your Email"
         formControlName="email"
         class="w-full input input-neutral focus:outline-mz-primary border-gray-300 focus:border-transparent
-        border-2 placeholder:font-bold placeholder:text-gray-400">
+        border-2 placeholder:font-bold placeholder:text-gray-400 bg-gray-50  text-gray-900">
         @if (formGroup().get('email')?.invalid && formGroup().get('email')?.touched) {
             <div class="w-full flex flex-col gap-1 capitalize  text-sm text-error">
             <p *ngIf="formGroup().get('email')?.getError('required')">
