--- a/src/app/features/home/components/intro-pop-up/intro-pop-up.component.html
+++ b/src/app/features/home/components/intro-pop-up/intro-pop-up.component.html
@@ -1,3 +1,4 @@
+<section>
 
     <button (click)="initShowIntroPopUp()" type="button"
     class="absolute left-2 top-[50%] translate-y-[-50%] cursor-pointer z-5">
@@ -6,9 +7,8 @@
     </button>
 
     <section  
-    class="bg-white fixed top-[50%] translate-y-[-50%]  left-[50%]  z-20 
-    w-[90%] md:w-auto duration-700 "
-    [ngClass]="isIntro() ? 'translate-x-[-50%]' : 'translate-x-[-300%]'">
+    class="bg-white fixed top-[50%] translate-y-[-50%]   z-20  w-[90%] md:w-auto duration-700 "
+    [ngClass]="isIntro() ? 'left-[50%] translate-x-[-50%]' : 'translate-x-[-300%]'">
         <div class="relative bg-white  shadow-sm">
             <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t  border-gray-200">
                 <h3 class="text-xl font-semibold text-gray-900  capitalize">
@@ -30,15 +30,22 @@
             </p>
             </div>
 
-            <div class="flex  items-center gap-2 p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-            <button type="button" class="cursor-pointer text-white bg-mz-primary hover:bg-mz-secound 
-                font-medium rounded-lg text-sm px-5 py-2.5 text-center ">
-                I accept
-            </button>
-            <button type="button" 
-            class="cursor-pointer text-mz-secound border border-zinc-300
-            font-medium rounded-lg text-sm px-5 py-2.5 text-center">Decline</button>
-            </div>
+            <ul class="flex  items-center gap-2 p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+            <li routerLink="/categories/motion">
+            <a class="cursor-pointer text-white bg-mz-primary hover:bg-mz-secound 
+            font-medium rounded-lg text-sm px-5 py-2.5 text-center capitalize ">
+            show categories
+            </a>
+            </li>
+
+            <li routerLink="/packages">
+            <a class="btn btn-outline cursor-pointer text-mz-secound border border-zinc-300 capitalize
+            font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+            packages
+            </a>
+            </li>
+        </ul>
         </div>
 </section>
 <section *ngIf="isIntro()" (click)="initShowIntroPopUp()"  class="fixed top-0 left-0 w-full h-screen"></section>
+</section>
