--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -1,8 +1,8 @@
 <section *ngIf="authService.CurrentUser()" 
-class="absolute top-20 left-0 w-full h-[70vh] flex justify-end items-center"
+class="absolute top-20 left-0 w-full h-[70vh] flex justify-end items-center "
 >
-    <aside class="relative menu bg-base-200 text-base-content min-h-full w-80  z-20 mx-[2.5%]
-    flex flex-col justify-start items-center gap-5 shadow-black shadow-sm rounded
+    <aside class="relative menu text-base-content min-h-full w-80  z-20 mx-[2.5%]
+    flex flex-col justify-start items-center gap-5 shadow-black shadow-sm rounded bg-gray-50
     after:absolute after:w-full after:h-[20%] after:bg-mz-primary after:opacity-35 after:top-0">
     
     <div class="w-full flex flex-col justify-start items-center z-5 mt-5 gap-2">
@@ -12,29 +12,30 @@ class="absolute top-20 left-0 w-full h-[70vh] flex justify-end items-center"
     <a class="line-clamp-1 z-5 font-semibold ">{{authService.CurrentUser()?.email}}</a>
     </div>
 
-    <ul class="relative w-[95%] flex flex-col  justify-start items-start gap-2
+    <ul class="relative w-[95%] flex flex-col  justify-start items-start gap-2 text-gray-900
     after:absolute after:w-full after:h-0.5 after:bg-mz-primary after:bottom-0 after:opacity-55 py-3">
 <li class="w-full"> 
     <a (click)="authService.signOut()"
-    class="flex justify-start items-center text-black capitalize font-bold gap-5
+    class="flex justify-start items-center  capitalize font-bold gap-5
     cursor-pointer">
     <i class="fa-solid fa-sign-out icons "></i>  sign out
     </a>
 </li>
 <li class="w-full"> 
-    <a class="flex justify-start items-center text-black capitalize font-bold gap-5
+    <a class="flex justify-start items-center  capitalize font-bold gap-5
     cursor-pointer">
     <i class="fa-solid fa-clock-rotate-left icons"></i> history
     </a>
 </li>
 <li class="w-full"> 
-    <a [routerLink]="['/',{outlets : {'booking-outlet': 'booking' , profile : null}}]" class="flex justify-start items-center text-black capitalize font-bold gap-5
+    <a [routerLink]="['/',{outlets : {'booking-outlet': 'booking' , profile : null}}]" 
+    class="flex justify-start items-center  capitalize font-bold gap-5
     cursor-pointer">
     <i class="fa-solid fa-book-open icons"></i> booking
     </a>
 </li>
 <li class="w-full"> 
-    <a routerLink="/" class="flex justify-start items-center text-black capitalize font-bold gap-5
+    <a routerLink="/" class="flex justify-start items-center  capitalize font-bold gap-5
     cursor-pointer">
     <i class="fa-solid fa-home icons"></i> home 
     </a>
