--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,16 +1,16 @@
 
-<footer class="w-full bg-mz-secound flex flex-col justify-center items-center gap-10">
- 
+<footer class="relative w-full min-h-[90vh] bg-mz-secound flex flex-col justify-center items-center gap-8">
 
     <div class="w-[90%] flex flex-col  justify-between items-center">
 
-    <div class="lg:w-[60%]">
+    <div class="relative lg:w-[60%] after:absolute after:w-full after:h-0.5  z-5 
+    after:bg-gray-50 after:bottom-0 py-5">
       <p class="mt-4 text-center text-gray-900  text-xl font-extrabold capitalize">
         We would love to have you join our marketing agency. Our goal is to take the project to the highest levels
       </p>
     </div>
 
-        <ul class="mt-6 flex justify-center items-center gap-5 " >
+        <ul class="mt-6 flex justify-center items-center gap-5 z-5" >
         @for (link of socialMedia(); track link.id) {
           <li>
           <a class="text-gray-50 text-2xl cursor-pointer hover:text-gray-900 duration-200">
@@ -23,7 +23,7 @@
 
   
 
-      <div class="w-[90%] grid grid-cols-1 sm:grid-cols-2 gap-8 text-center lg:grid-cols-4 lg:text-center">
+      <div class="w-[90%] grid grid-cols-1 sm:grid-cols-2 gap-8 text-center lg:grid-cols-4 lg:text-center z-5">
       @for (footer of  links(); track footer.id) {
             <div>
             <strong class="font-bold text-gray-900 uppercase
@@ -38,7 +38,7 @@
       }
       </div>
     
-      <div class="w-[95%] capitalize text-gray-50 text-left my-2">
+      <div class="w-[95%] capitalize text-gray-50 text-center ">
       copyright © 2025.create m&z page by mohamed enara
       </div>
 
