--- a/src/app/shared/components/user/user.component.html
+++ b/src/app/shared/components/user/user.component.html
@@ -1,4 +1,4 @@
-<ul class="flex justify-center items-center gap-5">
+<ul class="flex justify-center items-center gap-2 md:gap-4">
     <li>
         <app-selection-translate />
     </li>
